# judoshiai

./: .gitignore  .travis.yml  MAKE-BUILD-ENV.sh  Makefile  README  build-all.sh  build-release.msys2.sh  build-release.sh  build-win-release.sh  build-win64-release.sh  build-winxp-release.sh  build.msys2.sh  build.sh  install-mxe-env.sh  linux-mingw-w64-32bit.txt  linux-mingw-w64-64bit.txt  linux-mxe-i686-w64-mingw32.shared.txt  linux-mxe-x86_64-w64-mingw32.shared.txt  linux-mxe-x86_64-w64-mingw32.static.txt  meson-cross.sh  meson.build  meson.sh  packageDependenciesFromMsys2.sh  rebuild.sh  setup-BuildEnv-mingw-w64.deb.sh  setup-BuildEnv-mingw32.deb.sh  setup-BuildEnv-mxe.deb.sh  setup-BuildEnv.deb.sh  setup-BuildEnv.msys2.sh
auto-update/: Makefile  auto-update.rc  meson.build
common/: Makefile.inc
doc/: meson.build
etc/: clubs.txt
gnome/: meson.build
judoinfo/: Makefile  judoinfo.rc  meson.build
judojudogi/: Makefile  judojudogi.rc  meson.build
judoproxy/: comm.c  html.c  judoproxy.h  judoproxy.rc  main.c  meson.build
judoshiai/: Makefile  custom-category-svg-template.c  db-competitors.c  judoshiai.rc  matches.c  meson.build  popup-menu.c
judotimer/: Makefile  judotimer.rc  main.c  meson.build  tvlogo.c
judoweight/: Makefile  judoweight.rc  meson.build
pkgconfig/: ao.pc  libcurl.pc  libmpg123.pc  libssh2.pc
po/: LINGUAS  POTFILES  meson.build
serial/: comm.c  main.c  meson.build  serial.c
subprojects/: glib-2.0.wrap  gtk+-3.0.wrap  libao.wrap
