launchers = [
    'judoshiai.desktop',
    'judotimer.desktop',
    'judoinfo.desktop',
    'judoweight.desktop',
    'judojudogi.desktop',
    'judoproxy.desktop'
]

mime_info = [
    'judoshiai.mime',
    'judoshiai.keys'
]

install_data(launchers, install_dir : '/usr/share/applications')
install_data(mime_info, install_dir : '/usr/share/mime-info')
install_data('judoshiai.applications', install_dir : '/usr/share/application-registry')
install_data('judoshiai.packages', install_dir : '/usr/lib/mime/packages/judoshiai')
install_data('judoshiai.xml', install_dir : '/usr/share/mime/packages')
install_data('judoshiai.menu', install_dir : '/usr/share/menu/judoshiai')