judoshiai_sources = [ 'another-shiai.c',
                      'categories.c',
                      'category-graph.c',
                      'comm.c',
                      'competitors.c',
                      'completion.c',
                      'custom-category.c',
                      'custom-category-parser.c',
                      'custom-category-svg-template.c',
                      'db.c',
                      'db-categories.c',
                      'db-competitors.c',
                      'db-matches.c',
                      'db-table.c',
                      'db-validate.c',
                      'drawing.c',
                      'ftp.c',
                      'gdpr.c',
                      'httpd.c',
                      'import.c',
                      'log.c',
                      'main.c',
                      'match-data.c',
                      'matches.c',
                      'match-graph.c',
                      'medal-matches.c',
                      'menuacts.c',
                      'menus.c',
                      'names.c',
                      'popup-menu.c',
                      'print.c',
                      'print-texts.c',
                      'properties.c',
                      'search.c',
                      'set-categories.c',
                      'set-one-judoka.c',
                      'set-password.c',
                      'sheets.c',
                      'sql-dialog.c',
                      'svg.c',
                      'svg-lisp.c',
                      'trees.c',
                      'util.c',
                      'websock.c',
                      'write-results.c' ]

common_sources = [ '../common/avl.c',
                   '../common/ip.c',
                   '../common/protocol.c',
                   '../common/binreloc.c',
                   '../common/serial.c',
                   '../common/language.c',
                   '../common/sha1.c',
                   '../common/common.c',
                   '../common/common-utils.c',
                   '../common/websock-protocol.c',
                   '../common/auto-update.c' ]

thirdparty_sources = [ '../3rdparty/cJSON/cJSON.c',
                       '../3rdparty/httpp/httpp.c',
                       '../3rdparty/lisp/minilisp.c',
                       '../3rdparty/sqlite3/sqlite3.c' ]

basic_y = custom_target(
    'bison',
    output : [ 'basic.tab.c', 'basic.tab.h', 'basic.output' ],
    input : 'basic.y',
    command : [ bison, '-t', '-v', '-d', '@INPUT@'],
)

lex_c = custom_target(
    'flex',
    output : 'lex.yy.c',
    input : [ 'basic.l', basic_y ],
    command : [ flex, '@INPUT0@']
)

judoshiai_exe = executable('judoshiai',
                           judoshiai_sources, common_sources, thirdparty_sources, lex_c,
                           c_args : [ '-DAPPLICATION="judoshiai"', '-DAPP_NUM=1' ],
                           include_directories : includes,
                           dependencies : [ curl_dep, dl_dep, gtk_dep, rsvg_dep, ssh_dep, thread_dep] )
